# tauri-plugin-any-sync

./: .gitignore  AGENTS.md  CHERRY_PICK_GUIDE.md  CLAUDE.md  Cargo.toml  README.md  TESTING_PIVOT.md  Taskfile.yml  buf.gen.yaml  build-go-backend.sh  build-go-mobile.sh  build-proto.rs  build.rs  opencode.jsonc  package.json  run-example.sh  tauri-plugin-any-sync-prd.md
.cargo/: config.toml
.github/workflows/: audit.yml  clippy.yml  release.yml  test.yml
android/: .gitignore  AGENTS.md  build.gradle.kts
buf/: Taskfile.yml  buf.gen.syncspace.yaml  buf.yaml
buf/proto/dispatch-transport/: buf.gen.yaml
buf/proto/syncspace-api/: buf.gen.yaml
buf/proto/transport/: buf.gen.yaml
example-app/: .gitignore  AGENTS.md  CLAUDE.md  README.md  Taskfile.yml  index.html  jsconfig.json  package.json  vite.config.ts
example-app/src/: App.svelte  App.tsx  index.css  style.css
example-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.ios.conf.json
example-app/src-tauri/capabilities/: sidecar.json
example-app/src-tauri/src/: lib.rs
example-app/src-tauri/tests/: README.md  integration.rs
example-app/src/hooks/: useAutoSave.ts  useMediaQuery.ts
example-app/src/lib/: formatDate.ts
example-app/src/services/: notes.ts
example-app/src/store/: useNotesStore.ts
examples/tauri-app/: AGENTS.md  package.json  svelte.config.js
examples/tauri-app/src/: App.svelte  style.css  vite-env.d.ts
examples/tauri-app/src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
go-backend/: .gitignore  AGENTS.md  README.md  Taskfile.yml  go.mod  go.sum  go.work  go.work.sum
go-backend/api/proto/: health.proto  storage.proto
go-backend/api/server/: health.go  health_test.go  storage.go
go-backend/cmd/mobile/: README.md  storage.go
go-backend/cmd/server/: main.go
go-backend/desktop/: Taskfile.yml  go.mod  main.go
go-backend/desktop/proto/: storage.proto
go-backend/internal/config/: config.go
go-backend/internal/health/: service.go
go-backend/internal/storage/: anystore.go  anystore_test.go
go-backend/mobile/: Taskfile.yml  go.mod  go.sum  main.go  storage.go
go-backend/shared/: go.mod
guest-js/: index.ts
ios/: AGENTS.md
openspec/: CLAUDE.md  project.md
openspec/changes/add-anystore-storage-api/: design.md  proposal.md  tasks.md
openspec/changes/add-integration-tests/: design.md  proposal.md  tasks.md
openspec/changes/add-network-sync/: design.md  proposal.md  tasks.md
openspec/changes/binaries-dist/: design.md  proposal.md  tasks.md
openspec/changes/gomobile-android-build/: design.md  proposal.md  tasks.md
openspec/changes/replace-documents-with-changes/: design.md  proposal.md  tasks.md
openspec/changes/scaffold-go-backend/: design.md  proposal.md  tasks.md
openspec/changes/syncspace-monogenesis/: any-sync-architecture.md  migration-plan.md  proposal.md  syncspace-integration-plan.md  tasks.md
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
plugin-go-backend/: .gitignore  AGENTS.md  CLAUDE.md  README.md  Taskfile.yml  go.work  go.work.sum
plugin-go-backend/desktop/: Taskfile.yml  go.mod  go.sum  main.go
plugin-go-backend/mobile/: README.md  Taskfile.yml  go.mod  go.sum  main.go  storage.go  tools.go
plugin-go-backend/shared/: Taskfile.yml  go.mod  go.sum
plugin-js-api/: README.md  Taskfile.yml  biome.jsonc  package.json  rollup.config.js  tsconfig.json
plugin-js-api/scripts/: generate_api.ts  protoc-gen-custom-client.ts
plugin-js-api/src/: example.ts  index.ts
plugin-rust-core/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  build.rs
plugin-rust-core/android/: AGENTS.md  CLAUDE.md  README.md  build.gradle.kts
plugin-rust-core/android/src/main/java/: AnySyncPlugin.kt
plugin-rust-core/android/src/test/java/: AnySyncUnitTest.kt
plugin-rust-core/ios/: .gitignore  AGENTS.md  CLAUDE.md  Package.swift  README.md
plugin-rust-core/ios/Sources/: AnySyncPlugin.swift  ExamplePlugin.swift
plugin-rust-core/ios/Tests/PluginTests/: AnySyncPluginTests.swift
plugin-rust-core/permissions/: default.toml
plugin-rust-core/permissions/autogenerated/: reference.md
plugin-rust-core/permissions/autogenerated/commands/: storage_delete.toml  storage_get.toml  storage_list.toml  storage_put.toml
plugin-rust-core/permissions/schemas/: schema.json
plugin-rust-core/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
plugin-rust-core/src/proto/: mod.rs
plugin-rust-core/tests/: command_passthrough.rs
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src/proto/: anysync.rs  mod.rs
src/service/: desktop.rs  mobile.rs  mod.rs
tests/: storage_integration.rs
(+133 files in other folders)
