[package]
name = "tauri-plugin-any-sync"
version = "0.1.0"
authors = [ "Alexey Alekhin <laughedelic@gmail.com>" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
include = ["src/**/*", "src-tauri/**/*", "build.rs", "build-go-backend.sh", "binaries/**/*"]
links = "tauri_plugin_any_sync"

[features]
x86_64-apple-darwin = []
aarch64-apple-darwin = []
x86_64-unknown-linux-gnu = []
aarch64-unknown-linux-gnu = []
x86_64-pc-windows-msvc = []
macos = ["x86_64-apple-darwin", "aarch64-apple-darwin"]
linux = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]
windows = ["x86_64-pc-windows-msvc"]
all = ["macos", "linux", "windows"]

[dependencies]
tauri = { version = "2.9.2" }
tauri-plugin-shell = "2.3.3"
serde = "1.0"
thiserror = "2"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.12"
prost = "0.13"
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }
tonic-build = "0.12"
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"
