[workspace]
members = ["plugin-rust-core", "example-app/src-tauri"]
resolver = "2"

[workspace.package]
authors = ["Alexey Alekhin <laughedelic@gmail.com>"]
edition = "2021"
rust-version = "1.77.2"

[workspace.dependencies]
tauri = { version = "2.9.2" }
serde = "1.0"
thiserror = "2"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.12"
prost = "0.13"
