[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Alexey Alekhin <laughedelic@gmail.com>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.1", default-features = false , features = [] }

[dependencies]
tauri = { version = "2.9.2", features = [] }
tauri-plugin-shell = "2.3.3"
tauri-plugin-any-sync = { path = "../../plugin-rust-core", features = ["all"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
tauri = { version = "2.9.2", features = ["test"] }
